
Complete version history
========================

############################################################################## 
Math::Big:

2001-03-17 1.00: first version with primes(), fibonacci(), base()
2001-03-24 1.01: added: hailstone()
2001-04-12 1.02: added: factors(), wheel()
		 fixed: primes()
2001-05-07 1.03: added: factorial()
2001-06-11 1.04: added: euler, bernoulli, cos, tan, sin, cosh, sinh, 
			arctan, arctanh, arcsin, arcsinh,
		 moved: wheel, factor_wheel => Math::Big::Factorial
2001-07-09 1.05: version increase for CPAN release
2002-27-03 1.07: fixed testsuite to play nice with newest BigInt
		 small doc fixes
		 require v1.56, since v1.55 is broken on Windows
2002-08-13 1.08: pi() finally works (thanx to Robert Jaeger)
		 require BigInt v1.61
		 some more tests
2003-12-11 1.09 Tels 
 * require Math::BigInt v1.67 
 * factorial() uses simple BigInt bfac() for speed
2004-08-13 1.10 Tels 161 tests 
 * __END__ in Big.pm, remove shebang line
 * removed needless return statements for more speed
 * log() now simple calls BigFloat log for speed (it was unusable
   slow before)
 * hailstone() is between two and three times faster
 * pi() is slightly faster by caching two objects for '5' and '236'
 * require Math::BigInt v1.72
 * arctan(), tan(), sin(), cos() etc are now about 10% faster
 * arcsin($x) were $x != 0 was broken

############################################################################## 
Math::Big::Factors:

2001-06-15 1.00: first version from Math::Big
2004-08-13 1.01: cleanups, remove shebang line and needless return statements

############################################################################## 
Math::BigInt::Constant and Math::Roman are now separate CPAN packages. Please
see L<http://search.cpan.org/>.

Please send me test-reports, your experiences with this and your ideas - I love
to hear about my work!

Tels <http://bloodgate.com/>